refactor: docs RatingController to yaml
